Update payment methods and QRIS image

--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 
 <div class="container">
     <div class="header">
-        <img src="https://i.ibb.co/L5hY5tJ/image.png" alt="Ralzz Logo" class="logo">
-        <p class="shop-name">RALZZ STORE</p>
+        <img src="https://files.catbox.moe/fdm5e5.jpg" alt="Ralzz Logo" class="logo">
+        <p class="shop-name">RALZZ PAYMENT</p>
     </div>
 
     <h2>Payment Method</h2>
 
     <div class="pay-item dana">
         <div class="pay-name">DANA</div>
-        <button class="btn-action" onclick="copyText(this, '081234567890')">SALIN</button>
+        <button class="btn-action" onclick="copyText(this, '081259435726')">SALIN</button>
     </div>
 
     <div class="pay-item gopay">
         <div class="pay-name">GOPAY</div>
-        <button class="btn-action" onclick="copyText(this, '081234567890')">SALIN</button>
+        <button class="btn-action" onclick="copyText(this, '081226541936')">SALIN</button>
     </div>
 
     <div class="pay-item ovo">
         <div class="pay-name">OVO</div>
-        <button class="btn-action" onclick="copyText(this, '081234567890')">SALIN</button>
+        <button class="btn-action" onclick="copyText(this, '088989424856')">SALIN</button>
     </div>
 
     <div class="pay-item qris">
@@ -39,7 +39,7 @@
 </div>
 
 <div id="qrisModal" class="modal" onclick="closeQris()">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/QR_code_for_mobile_English_Wikipedia.svg" alt="QRIS Code" class="modal-content">
+    <img src="https://files.catbox.moe/orwja1.png" alt="QRIS Code" class="modal-content">
 </div>
 
 <script src="script.js"></script>
